# sample-extension

./: Cargo.toml
extension/: Cargo.toml
extension/src/: cache.rs  kitsu.rs  lib.rs
request/: Cargo.toml
request/src/: error.rs  lib.rs  middleware.rs
src/: kitsu.rs  lib.rs  request.rs
wit/: deps.toml  world.wit
