[package]
name = "request"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { version = "1.0.145", optional = true }
thiserror = "2.0.16"
url = { workspace = true }
wit-bindgen = { workspace = true }

[features]
json = ["serde", "serde_json"]
